gitでファイルが参照できるように修正

--- a/kiskBirth2503/css/main.css
+++ b/kiskBirth2503/css/main.css
@@ -90,11 +90,11 @@ table tbody tr:last-child td {
     color: #b4902c;
 }
 #gray-pink {
-    color: #cab8b9;
+    color: #c9acad;
 }
 #gray-green {
-    color: #b8cabd;
+    color: #abc9aa;
 }
 #gray-blue {
-    color: #b8c7ca;
+    color: #a7baca;
 }
