フォント微調整

--- a/kiskBirth2503/css/main.css
+++ b/kiskBirth2503/css/main.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Noteworthy', 'Amatic SC', 'Zen Kurenaido', cursive;
+    font-family: 'Chalkboard SE', 'Amatic SC', 'Zen Kurenaido', cursive;
     color: #ccc;
 }
 body {
